home image and loading component

--- a/index.html
+++ b/index.html
@@ -2,9 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta property="og:title" content="Partidos de los miercoles" />
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content=" https://puntines.vercel.app/" />
+    <meta property="og:image" content="image-og.jpg" />
+    <meta property="og:description" content="Estadisticas de los partidos en el Suizo los miercoles a las 20:00" />
+    <meta property="og:site_name" content="Estadisticas de los partidos" />
+    <meta property="fb:admins" content="ID de Facebook" />
+    <link rel="icon" type="image/svg+xml" href="/soccer_ball.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Partidos de los miercoles</title>
   </head>
   <body>
     <div id="root"></div>
