--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta property="og:title" content="Partidos de los miercoles" />
     <meta property="og:type" content="article" />
     <meta property="og:url" content=" https://puntines.vercel.app/" />
-    <meta property="og:image" content="image-og.jpg" />
+    <meta property="og:image" content="/image-og.jpg" />
     <meta property="og:description" content="Estadisticas de los partidos en el Suizo los miercoles a las 20:00" />
     <meta property="og:site_name" content="Estadisticas de los partidos" />
     <meta property="fb:admins" content="ID de Facebook" />
